--- a/pillar.conf
+++ b/pillar.conf
@@ -1,9 +1,9 @@
 {
   "metadata" : {
-    "title": "The Pillar Super Book Archetype",
-    "attribution": "The Pillar team",
+    "title": "Call Stack Management",
+    "attribution": "Clément Béra with Stéphane Ducasse",
     "series": "Square Bracket tutorials",
-    "keywords": "project template, Pillar, Pharo, Smalltalk"
+    "keywords": ""
   },
   "outputDirectory": "build",
   "mainDocument": "book",
@@ -12,8 +12,8 @@
   "htmlTemplate": "support/templates/html.mustache",
   "htmlChapterTemplate": "support/templates/html.mustache",
   "chapters": [ 
-	"Chapters/Chapter1/chapter1",
-	"Chapters/Chapter2/chapter2"],
+	"StackManagement/StackManagement"
+	],
   "newLine": #unix,
   "configurations": {
     "LaTeX" : {
