some formatting to get started. Now should fix bug in Pillar related to eval=true.

--- a/pillar.conf
+++ b/pillar.conf
@@ -1,28 +1,13 @@
 {
-  "metadata" : {
     "title": "Call Stack Management",
     "attribution": "Clément Béra with Stéphane Ducasse",
-    "series": "Square Bracket tutorials",
-    "keywords": ""
-  },
-  "outputDirectory": "build",
-  "mainDocument": "book",
-  "latexTemplate": "support/templates/main.latex.mustache",
-  "latexChapterTemplate": "support/templates/chapter.latex.mustache",
-  "htmlTemplate": "support/templates/html.mustache",
-  "htmlChapterTemplate": "support/templates/html.mustache",
-  "chapters": [ 
-	"StackManagement/StackManagement"
-	],
-  "newLine": #unix,
-  "configurations": {
-    "LaTeX" : {
-      "outputType": #'latex:sbabook',
-      "separateOutputFiles": true
-    },
-    "HTML" : {
-      "outputType": #html,
-      "separateOutputFiles": true
-    }
-  }
+    "series": "The Pharo TextBook Collection — edited by S. Ducasse",
+    "keywords": "Stack, interpreter, language implementation, Pharo, Smalltalk",
+    "base_url": "/booklet-Smacc/html",
+    "series": "The Pharo Technology Booklet Collection — edited by S. Ducasse",
+    "newLine": #unix,
+    "tocFile":"smacc.pillar",
+    "latexWriter": #'latex:sbabook',
+    "htmlWriter": #html
 }
+ 
