--- a/pillar.conf
+++ b/pillar.conf
@@ -6,7 +6,7 @@
     "base_url": "/booklet-Smacc/html",
     "series": "The Pharo Technology Booklet Collection — edited by S. Ducasse",
     "newLine": #unix,
-    "tocFile":"smacc.pillar",
+   "plugins": ["PRScriptEvaluator"],
     "latexWriter": #'latex:sbabook',
     "htmlWriter": #html
 }
